--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,10 +7,7 @@
 		"dockerfile": "Dockerfile"
 	},
 	"features": {
-		"ghcr.io/devcontainers/features/rust:1": {
-			"version": "1.70",
-			"profile": "minimal"
-		}
+		"ghcr.io/devcontainers/features/rust:1": {}
 	}
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
